fixes styling of contract chart on mobile

--- a/client/components/Dropdown/index.sass
+++ b/client/components/Dropdown/index.sass
@@ -12,6 +12,7 @@
   background-color: $background-color
   -webkit-appearance: none
   appearance: none
+  height: 35px
   &::-ms-expand
     display: none
   &-fullWidth
