--- a/client/components/Modal/index.sass
+++ b/client/components/Modal/index.sass
@@ -32,7 +32,7 @@
     line-height: 20px
     align-items: center
     overflow: hidden
-    max-height: calc(100vh - 90px)
+    max-height: calc(100vh - 170px)
     overflow-y: scroll
     > div
       width: 100%
