--- a/client/components/StatsModal/index.sass
+++ b/client/components/StatsModal/index.sass
@@ -36,8 +36,7 @@
     .Checkbox
       margin-left: 10px
   .Dropdown
-    margin-top: 10px
-    margin-bottom: 10px
+    margin: 10px 0
 
 .Slider
   display: flex
